[package]
name = "axum_warehouse"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = {version = "1.48.0", features = ["full"]}
sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "macros", "postgres", "chrono"]}

serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145" 

chrono = {version = "0.4.42", features = ["serde"]}
anyhow = "1.0.100"
dotenv = "0.15.0"
